--- a/other.html
+++ b/other.html
@@ -20,7 +20,7 @@
         とても良い経験になったと思います。今年もTGS出展を目指して、プログラミング班としてゲームを製作中です。
     </p>
         <div class="button">
-            <button onclick="location.href='site-kadai.html'">back</button>
+            <button onclick="location.href='index.html'">back</button>
     </div>
 </body>
 </html>
