--- a/site-cafe.html
+++ b/site-cafe.html
@@ -32,7 +32,7 @@
     <img src="cafe3.png" alt="cafe3" class="photo">
         </div>
         <div class="button">
-            <button onclick="location.href='site-kadai.html'">back</button>
+            <button onclick="location.href='index.html'">back</button>
     </div>
 </body>
 </html>
