--- a/site-chair.html
+++ b/site-chair.html
@@ -22,7 +22,7 @@
         色をつけたり、質感を表現する域まで当時達していなかったため、時間をさらにかけてそこまで表現していけると良いと思いました。
     </p>
         <div class="button">
-        <button onclick="location.href='site-kadai.html'">back</button>
+        <button onclick="location.href='index.html'">back</button>
     </div>
 </body>
 </html>
