--- a/site-conpe.html
+++ b/site-conpe.html
@@ -25,7 +25,7 @@
         文字の部分が黒字に見えますが、少し茶色が入っています。
     </p>
         <div class="button">
-            <button onclick="location.href='site-kadai.html'">back</button>
+            <button onclick="location.href='index.html'">back</button>
     </div>
 </body>
 </html>
