--- a/site-ice.html
+++ b/site-ice.html
@@ -24,7 +24,7 @@
         ひとつの動画として楽しくまとまっているのではないかと思います。
     </p>
         <div class="button">
-        <button onclick="location.href='site-kadai.html'">back</button>
+        <button onclick="location.href='index.html'">back</button>
     </div>
 </body>
 </html>
