--- a/site-iruka.html
+++ b/site-iruka.html
@@ -22,7 +22,7 @@
         飛ばせる動作自体は割とすぐ実装できたため、余裕があれば他の要素を付け足しても良いなと思いました。
     </p>
         <div class="button">
-            <button onclick="location.href='site-kadai.html'">back</button>
+            <button onclick="location.href='index.html'">back</button>
     </div>
 </body>
 </html>
