--- a/site-name.html
+++ b/site-name.html
@@ -22,7 +22,7 @@
         右上にあるロゴは、自分の名前を重ねて、シンプルかつわかりやすいものを作りました。
     </p>
         <div class="button">
-            <button onclick="location.href='site-kadai.html'">back</button>
+            <button onclick="location.href='index.html'">back</button>
     </div>
 </body>
 </html>
