--- a/site-rabbit.html
+++ b/site-rabbit.html
@@ -23,7 +23,7 @@
         文字の配置にもこだわりました。
     </p>
         <div class="button">
-            <button onclick="location.href='site-kadai.html'">back</button>
+            <button onclick="location.href='index.html'">back</button>
     </div>
 </body>
 </html>
