--- a/site-bingo.html
+++ b/site-bingo.html
@@ -29,7 +29,7 @@
         </p>
     </div>
         <div class="button">
-            <button onclick="location.href='site-kadai.html'">back</button>
+            <button onclick="location.href='index.html'">back</button>
     </div>
 </body>
 </html>
