--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
     <div class="contact" id="contact">
         <h3 class="subhead">CONTACT</h3>
         <p>email x22038@aitech.ac.jp</p>
+        <p class="bikou">アイコンはフリーのものからお借りしました。</p>
     </div>
 </body>
 </html>
