--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <h2 class="subhead">About</h2>
         <img src="" alt="">
         <h3>Profile</h3>
-        <p>愛知工業大学情報科学部メディア情報専攻。<br>2003年生まれ。2022年に愛知工業大学に入学する。現在は大学2年生。
+        <p>愛知工業大学情報科学部メディア情報専攻。<br>2003年生まれ。2022年に愛知工業大学に入学する。現在は大学3年生。
         </p>
         <h3>Skill</h3>
         <h4>Programing</h4>
-        <p>c,c++,c#,html,css,javascript,python</p>
+        <p>c,c++,c#,html,css,javascript,python,PHP</p>
         <h4>Media</h4>
         <p>maya,Ilastlator,Animate</p>
     </div>
